--- a/Employee.API/appsettings.json
+++ b/Employee.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-VG2LC52\\MSSQLSERVERR;Database=LoginApi;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=.;Database=LoginApi;Trusted_Connection=True;TrustServerCertificate=True"
 
   },
   "Jwt": {
